<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--<TextView
        android:id="@+id/textview_nameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/loginbutton_nameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/loginbutton_name"
            android:onClick="showmessage"
            android:drawableRight="@drawable/logout"
            android:backgroundTint="#FF5722"
            />

        <Button
            android:id="@+id/logoutbutton_nameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/logoutbutton_name"
            android:onClick="showmessage"
            android:drawableRight="@drawable/logout"
            android:backgroundTint="#FF5722"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_nameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:padding="10dp"
        android:text="@string/textview_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</LinearLayout>